# openchaya

./: .gitignore  CLAUDE.md  TODO.md  docker-compose.yml  package-lock.json  restart-client.sh  restart-docker.sh  restart-engine-0.0.0.0.sh  restart-front.sh
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.codex/: hooks.json
app/: .impeccable.md  DISTRIBUTION.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
app/design/: agent-runtime-prototype.html  automation-prototype.html  gen-inkgold.cjs  gen-mobius.cjs  logo-aperture.html  logo-drafts.html  logo-prototypes.html  pure-components-light.html  pure-components.html  pure-dark-3layer.html  wiki-focus-prototype.html  wiki-unify-prototype.html
app/electron/: automation.cjs  configDb.cjs  cron.cjs  cursorDriver.cjs  evolve.cjs  fbot.cjs  fbotMenu.cjs  localAgent.cjs  main.cjs  notes.cjs  preload.cjs  review.cjs
app/scripts/: dev-rename-electron.cjs
app/src/: index.css  main.tsx
chaya-engine/: API.md  MCP-IMPL.md  go.mod  go.sum  restart.sh
chaya-engine/config/: config.yaml  tool_descriptions.json
chaya-engine/internal/: config.go
chaya-engine/pkg/: tool.go
chaya-front/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
chaya-ml/: Dockerfile  pyproject.toml
chaya-ml/chaya_ml/: __init__.py  __main__.py  app.py
design/: chaya-interaction.html
docs/: local-agents.md
scripts/: _lib.sh  mac-storage-sweep.sh
(+502 files in other folders)
