[project]
name = "chaya-ml"
version = "0.1.0"
description = "Chaya local ML sidecar: sentence embeddings for knowledge base / RAG"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0",
]

[project.optional-dependencies]
cpu = []

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chaya_ml"]
